--- a/configs/eccv/experiment_1.yaml
+++ b/configs/eccv/experiment_1.yaml
@@ -11,7 +11,7 @@ MEASUREMENTS:
   targets: (31)
 
 BATCH_SIZE: 4
-NUMBER_ITERATIONS: 20000000
+NUMBER_ITERATIONS: 20000
 NUMBER_FRAMES_FUSION: 1
 STEERING_DIVISION: [0.05, 0.05, 0.1, 0.3, 0.3, 0.1, 0.05, 0.05]
 LABELS_DIVISION: [[2]]
@@ -32,7 +32,8 @@ LR_G: 0.0002
 LEARNING_RATE: 0.00005
 SKIP: 0
 TYPE: "recon"
-L1_WEIGHT: 1
+L1_WEIGHT: 0
+LABSMOOTH: 0
 
 #### Testing Related Parameters ####
 TEST_SCHEDULE: range(0, 20000000, 2000)  # The frequency the model is actually tested.
