--- a/configs/eccv/experiment_2.yaml
+++ b/configs/eccv/experiment_2.yaml
@@ -1,6 +1,7 @@
 
 #### General Configuration Parameters ####
-SAVE_SCHEDULE: range(0, 20000000, 200)
+SAVE_SCHEDULE: range(0, 20000000, 2000)
+
 NUMBER_OF_LOADING_WORKERS: 12   # Number of threads used in the data loader
 
 #### Input related parameters ####
@@ -8,8 +9,10 @@ SENSORS:
   rgb: (3, 88, 200)
 MEASUREMENTS:
   targets: (31)
-BATCH_SIZE: 40
-NUMBER_ITERATIONS: 20000000
+
+BATCH_SIZE: 4
+NUMBER_ITERATIONS: 20000
+NUMBER_FRAMES_FUSION: 1
 STEERING_DIVISION: [0.05, 0.05, 0.1, 0.3, 0.3, 0.1, 0.05, 0.05]
 LABELS_DIVISION: [[2]]
 TARGETS: ['steer', 'throttle', 'brake']
@@ -20,27 +23,37 @@ SEQUENCE_STRIDE: 1
 AUGMENT_LATERAL_STEERINGS: 6  # Depending on this value there is a constant multiplying lateral steers
 SPEED_FACTOR: 40.0
 TRAIN_DATASET_NAME: 'SeqTrain'
-SKIP: 1
-#MODEL_NAME: ''
+
+#GAN RELATED PARAMETERS
+GANMODEL_NAME: 'LSDcontrol'
+LOSS_FUNCTION: 'NORMAL'
+LR_D: 0.0002
+LR_G: 0.0002
+LEARNING_RATE: 0.00005
+SKIP: 0
+TYPE: "recon"
+L1_WEIGHT: 0
+LABSMOOTH: 0
 
 #### Testing Related Parameters ####
-TEST_SCHEDULE: range(0, 20000000, 200)  # The frequency the model is actually tested.
+TEST_SCHEDULE: range(0, 20000000, 2000)  # The frequency the model is actually tested.
 
 
 #### Network Related Parameters ####
 
 
 MODEL_NAME: 'coil_icra'
-LEARNING_RATE: 0.0002  # First
 TRAINING_SCHEDEULE: [[50000, 0.5], [100000, 0.5 * 0.5], [150000, 0.5 * 0.5 * 0.5], [200000, 0.5 * 0.5 * 0.5 * 0.5],[250000, 0.5 * 0.5 * 0.5 * 0.5 * 0.5]]  # Number of iterations, multiplying factor
 
 #TODO check how to use this part
 BRANCH_LOSS_WEIGHT: [0.95, 0.95, 0.95, 0.95, 0.05]
+
 VARIABLE_WEIGHT:
   Steer: 0.5
   Gas: 0.45
   Brake: 0.05
   Speed: 1.0
+
 
 
 #### Simulation Related Parameters ####
