--- a/configs/eccv/experiment_3.yaml
+++ b/configs/eccv/experiment_3.yaml
@@ -10,7 +10,7 @@ SENSORS:
 MEASUREMENTS:
   targets: (31)
 
-BATCH_SIZE: 1
+BATCH_SIZE: 40
 NUMBER_ITERATIONS: 200000
 NUMBER_FRAMES_FUSION: 1
 STEERING_DIVISION: [0.05, 0.05, 0.1, 0.3, 0.3, 0.1, 0.05, 0.05]
@@ -23,8 +23,17 @@ SEQUENCE_STRIDE: 1
 AUGMENT_LATERAL_STEERINGS: 6  # Depending on this value there is a constant multiplying lateral steers
 SPEED_FACTOR: 40.0
 TRAIN_DATASET_NAME: 'SeqTrain'
-MODEL_NAME: 'LSDcontrol'
-SKIP: 1
+
+#GAN RELATED PARAMETERS
+GANMODEL_NAME: 'LSDcontrol'
+LOSS_FUNCTION: 'LSGAN'
+LR_D: 0.0002
+LR_G: 0.0002
+LEARNING_RATE: 0.00005
+SKIP: 0
+TYPE: "recon"
+L1_WEIGHT: 1
+LABSMOOTH: 0
 
 #### Testing Related Parameters ####
 TEST_SCHEDULE: range(0, 20000000, 2000)  # The frequency the model is actually tested.
@@ -34,7 +43,6 @@ TEST_SCHEDULE: range(0, 20000000, 2000)  # The frequency the model is actually t
 
 
 MODEL_NAME: 'coil_icra'
-LEARNING_RATE: 0.0002  # First
 TRAINING_SCHEDEULE: [[50000, 0.5], [100000, 0.5 * 0.5], [150000, 0.5 * 0.5 * 0.5], [200000, 0.5 * 0.5 * 0.5 * 0.5],[250000, 0.5 * 0.5 * 0.5 * 0.5 * 0.5]]  # Number of iterations, multiplying factor
 
 #TODO check how to use this part
