--- a/configs/eccv/experiment_1.yaml
+++ b/configs/eccv/experiment_1.yaml
@@ -10,8 +10,8 @@ SENSORS:
 MEASUREMENTS:
   targets: (31)
 
-BATCH_SIZE: 4
-NUMBER_ITERATIONS: 20000
+BATCH_SIZE: 100
+NUMBER_ITERATIONS: 1000000
 NUMBER_FRAMES_FUSION: 1
 STEERING_DIVISION: [0.05, 0.05, 0.1, 0.3, 0.3, 0.1, 0.05, 0.05]
 LABELS_DIVISION: [[2]]
@@ -25,7 +25,7 @@ SPEED_FACTOR: 40.0
 TRAIN_DATASET_NAME: 'SeqTrain'
 
 #GAN RELATED PARAMETERS
-GANMODEL_NAME: 'LSDcontrol'
+GANMODEL_NAME: 'LSDcontrol_nopatch'
 LOSS_FUNCTION: 'LSGAN'
 LR_D: 0.0002
 LR_G: 0.0002
