--- a/configs/eccv/exp_WGAN_PretrainedF_IL.yaml
+++ b/configs/eccv/exp_WGAN_PretrainedF_IL.yaml
@@ -11,7 +11,7 @@ MEASUREMENTS:
   targets: (31)
 
 #task yaml
-BATCH_SIZE: 100
+BATCH_SIZE: 30
 NUMBER_ITERATIONS: 10000000
 NUMBER_FRAMES_FUSION: 1
 STEERING_DIVISION: [0.05, 0.05, 0.1, 0.3, 0.3, 0.1, 0.05, 0.05]
@@ -33,9 +33,13 @@ LR_G: 0.00005
 LEARNING_RATE: 0.0002
 SKIP: 0
 TYPE: "task"
-L1_WEIGHT: 1
+L1_WEIGHT: 0.5
 LABSMOOTH: 0
-PRETRAINED: "RECON"
+PRETRAINED: "IL"
+TRAIN_TYPE: 'WGAN'
+SEED: 5
+CLAMP: 0.01
+N_CRITIC: 5
 
 #### Testing Related Parameters ####
 TEST_SCHEDULE: range(0, 10000000, 2000)  # The frequency the model is actually tested.
