--- a/configs/eccv/experiment_3.yaml
+++ b/configs/eccv/experiment_3.yaml
@@ -10,8 +10,9 @@ SENSORS:
 MEASUREMENTS:
   targets: (31)
 
-BATCH_SIZE: 120
-NUMBER_ITERATIONS: 1000000
+#task yaml
+BATCH_SIZE: 30
+NUMBER_ITERATIONS: 2000
 NUMBER_FRAMES_FUSION: 1
 STEERING_DIVISION: [0.05, 0.05, 0.1, 0.3, 0.3, 0.1, 0.05, 0.05]
 LABELS_DIVISION: [[2]]
@@ -25,14 +26,14 @@ SPEED_FACTOR: 40.0
 TRAIN_DATASET_NAME: 'SeqTrain'
 
 #GAN RELATED PARAMETERS
-GANMODEL_NAME: 'LSDcontrol_nopatch_smaller'
-LOSS_FUNCTION: 'NORMAL'
+GANMODEL_NAME: 'LSDcontrol_task'
+LOSS_FUNCTION: 'LSGAN'
 LR_D: 0.0002
 LR_G: 0.0002
-LEARNING_RATE: 0.00005
-SKIP: 0
-TYPE: "recon"
-L1_WEIGHT: 0
+LEARNING_RATE: 0.0001
+SKIP: 1
+TYPE: "task"
+L1_WEIGHT: 1
 LABSMOOTH: 0
 
 #### Testing Related Parameters ####
