--- a/configs/eccv/experiment_4.yaml
+++ b/configs/eccv/experiment_4.yaml
@@ -11,7 +11,7 @@ MEASUREMENTS:
   targets: (31)
 
 BATCH_SIZE: 120
-NUMBER_ITERATIONS: 1000000
+NUMBER_ITERATIONS: 10000000
 NUMBER_FRAMES_FUSION: 1
 STEERING_DIVISION: [0.05, 0.05, 0.1, 0.3, 0.3, 0.1, 0.05, 0.05]
 LABELS_DIVISION: [[2]]
@@ -26,13 +26,13 @@ TRAIN_DATASET_NAME: 'SeqTrain'
 
 #GAN RELATED PARAMETERS
 GANMODEL_NAME: 'LSDcontrol_nopatch_smaller'
-LOSS_FUNCTION: 'LSGAN'
+LOSS_FUNCTION: 'NORMAL'
 LR_D: 0.0002
 LR_G: 0.0002
 LEARNING_RATE: 0.00005
 SKIP: 0
 TYPE: "recon"
-L1_WEIGHT: 0
+L1_WEIGHT: 1
 LABSMOOTH: 0
 
 #### Testing Related Parameters ####
