--- a/configs/eccv/experiment_5.yaml
+++ b/configs/eccv/experiment_5.yaml
@@ -1,6 +1,6 @@
 
 #### General Configuration Parameters ####
-SAVE_SCHEDULE: range(0, 10000000, 2000)
+SAVE_SCHEDULE: range(0, 20000000, 2000)
 
 NUMBER_OF_LOADING_WORKERS: 12   # Number of threads used in the data loader
 
@@ -10,8 +10,7 @@ SENSORS:
 MEASUREMENTS:
   targets: (31)
 
-#task yaml
-BATCH_SIZE: 100
+BATCH_SIZE: 120
 NUMBER_ITERATIONS: 10000000
 NUMBER_FRAMES_FUSION: 1
 STEERING_DIVISION: [0.05, 0.05, 0.1, 0.3, 0.3, 0.1, 0.05, 0.05]
@@ -26,19 +25,18 @@ SPEED_FACTOR: 40.0
 TRAIN_DATASET_NAME: 'SeqTrain'
 
 #GAN RELATED PARAMETERS
-GANMODEL_NAME: 'LSDcontrol_task'
+GANMODEL_NAME: 'LSDcontrol_nopatch'
 LOSS_FUNCTION: 'LSGAN'
-LR_D: 0.00005
-LR_G: 0.00005
-LEARNING_RATE: 0.0002
+LR_D: 0.0002
+LR_G: 0.0002
+LEARNING_RATE: 0.00005
 SKIP: 0
-TYPE: "task"
+TYPE: "recon"
 L1_WEIGHT: 1
 LABSMOOTH: 0
-PRETRAINED: "RECON"
 
 #### Testing Related Parameters ####
-TEST_SCHEDULE: range(0, 10000000, 2000)  # The frequency the model is actually tested.
+TEST_SCHEDULE: range(0, 20000000, 2000)  # The frequency the model is actually tested.
 
 
 #### Network Related Parameters ####
